2008-02-26  Sanel <karijes@users.sourceforge.net>

	* Completed Time class with removal of millisecond member
	* In tests/util.cpp, before environmet vars are changed, they are saved
	first and later restored. That also caused removal of warning message
	* Revised TODO file
	* Revised DesktopFile.h documentation

2008-02-25  Sanel <karijes@users.sourceforge.net>

	* Documented Time class
	* Added system_set() in Time class
	* Time member set() returns nothing now
	* Small addition in Date's system_set() so settimeofday() don't fail

2008-02-24  Sanel <karijes@users.sourceforge.net>

	* Added E_RETURN_IF_FAIL and E_RETURN_VAL_IF_FAIL macros
	* Little reformatting in xdgmime.h
	* Fixed issue with update_settings() in Window.cpp; when client calls this
	with receiver uid, receiver will get event even if client immediately
	hides itself. Previously this wasn't the case.
	* Added double_buffer() member in Window
	* Revised Window documentation and cleaned unused code in Window.cpp

2008-02-23  Sanel <karijes@users.sourceforge.net>

	* Added _edelib_assert()
	* Default debug macros are E_DEBUG, E_ASSERT, E_STRLOC, E_FATAL, althought
	rest of the code need to be changed to reflect this changes
	* Pretty print when stack is dumped
	* Efatal (and the rest) is changed to _edelib_fatal() and similar

2008-02-17  Sanel <karijes@users.sourceforge.net>

	* Added edelib_strlcat() with tests

2008-02-16  Sanel <karijes@users.sourceforge.net>

	* Added missing.cpp in test suite so it can test various functions form
	Missing.{h,cpp}
	* Added edelib_strlcpy() with tests

2008-02-11  Sanel <karijes@users.sourceforge.net>

	* In Config.cpp made static functions that are visible only inside
	this file
	* In Jamrules removed EXEMODE from installation; jam by default set it to
	711

2008-02-10  Sanel <karijes@users.sourceforge.net>

	* Resource will not add '/ede/' to XDG paths. This should be set via XDG
	env variables
	* Modified Resource test too