@@ -79,6 +79,7 @@ EDELIB_SHARED
 EDELIB_NLS
 EDELIB_SOUND
 EDELIB_MIME
+EDELIB_CHECK_DBUS
 
 if test -n "$OPTIMFLAGS"; then
 	ALLFLAGS="$ALLFLAGS $OPTIMFLAGS"
